--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,8 +16,10 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
+    
       - name: Check Uptime
         run: uptime
       - name: Cpu info
